[fix] 기타 오류 해결 #SCURM-144 #DONE
공연 수정 시 좌석 매핑, 파티션 오류 해결